Further changes required for user testing - content changes

--- a/app/views/hearings/pages/channel.html
+++ b/app/views/hearings/pages/channel.html
@@ -31,11 +31,11 @@ Case details
 
                             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                                 <h2 class="govuk-fieldset__heading">
-                                    How will each party attend the hearing? (placeholder)
+                                    How will the parties attend the hearing?
                                 </h2>
                             </legend>
                             <div class="govuk-hint">
-                                Select how each party will attend the hearing or if they are not attending (placeholder).
+                                Select how each party will attend the hearing.
                             </div>
 
                             <br />
