--- a/app/views/hearings/pages/language.html
+++ b/app/views/hearings/pages/language.html
@@ -31,7 +31,7 @@ Case details
                                             </h2>
                                         </legend>
                                         <div class="govuk-hint">
-                                            This means the entire hearing will be carried out in Welsh, including all the hearing documents and paperwork.
+                                            This means the entire hearing will be carried out in Welsh.
                                         </div>
 
                                         <div class="govuk-radios govuk-radios--inline">
