--- a/app/views/hearings/pages/paneldifferent.html
+++ b/app/views/hearings/pages/paneldifferent.html
@@ -14,7 +14,7 @@ Case details
 
                 <a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
 
-                        <h2 class="govuk-heading-m">Select a new panel</h2>
+                        <h2 class="govuk-heading-m">Who will be on the hearing panel?</h2>
 
 
                         <form
@@ -101,7 +101,7 @@ Case details
                                                     <br>
                                                     <fieldset class="govuk-fieldset">
                                                         <legend class="govuk-fieldset__legend  govuk-fieldset__legend--s ">
-                                                            Ticketed (optional)
+                                                            Select a ticketed panel (optional)
                                                         </legend>
                                                         <div class="govuk-radios">
                                                             <div class="govuk-radios__item">
@@ -131,13 +131,13 @@ Case details
                                                             <div class="govuk-radios__item">
                                                                 <input class="govuk-radios__input" id="judgeticketed5" name="judgeticketedlevel" type="radio" value="05 - Industrial Injuries - one specialist member"   >
                                                                 <label class="govuk-label govuk-radios__label" for="judgeticketed5">
-                                                                    05 - Industrial Injuries - one specialist member
+                                                                    05 - Industrial Injuries - One Specialist Member
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
                                                                 <input class="govuk-radios__input" id="judgeticketed6" name="judgeticketedlevel" type="radio" value="06 - Industrial Injuries - two specialist members"  >
                                                                 <label class="govuk-label govuk-radios__label" for="judgeticketed3">
-                                                                    06 - Industrial Injuries - two specialist members
+                                                                    06 - Industrial Injuries - Two Specialist Members
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-radios__item">
