--- a/app/views/hearings/pages/venuedefault.html
+++ b/app/views/hearings/pages/venuedefault.html
@@ -27,7 +27,7 @@ Case details
                             <div class="govuk-form-group">
                                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                                     <h1 class="govuk-fieldset__heading">
-                                        Hearing venue details
+                                        What are the hearing venue details?
                                     </h1>
                                 </legend>
 
@@ -38,7 +38,7 @@ Case details
                                 <fieldset class="govuk-fieldset">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h1 class="govuk-fieldset__heading">
-                                            Will any additional facilities be required? (placeholder)
+                                            Will any additional facilities be required?
                                         </h1>
                                     </legend>
                                     <div class="govuk-radios govuk-radios--inline">
@@ -162,12 +162,6 @@ Case details
                                                     </label>
                                                 </div>
                                                 <div class="govuk-checkboxes__item">
-                                                    <input class="govuk-checkboxes__input" id="facilities16" name="facilities" type="checkbox" value="Portable Induction Loop">
-                                                    <label class="govuk-label govuk-checkboxes__label" for="facilities16" >
-                                                        Portable Induction Loop
-                                                    </label>
-                                                </div>
-                                                <div class="govuk-checkboxes__item">
                                                     <input class="govuk-checkboxes__input" id="facilities17" name="facilities" type="checkbox" value="Private Discussion Room">
                                                     <label class="govuk-label govuk-checkboxes__label" for="facilities17" >
                                                         Private Discussion Room
@@ -256,7 +250,7 @@ Case details
 
                             <div class="govuk-form-group" id="extraFacilities" style="display: none;">
                                 <h3 class="govuk-label-wrapper"><label class="govuk-label govuk-label--s" for="otherFacilities">
-                                    Provide details of any other facilities required (placeholder)
+                                    Provide details of any other facilities required
                                 </label>
                                 </h3>
 <!--                                <div id="more-detail-hint" class="govuk-hint">-->
