--- a/app/views/hearings/pages/timing.html
+++ b/app/views/hearings/pages/timing.html
@@ -288,7 +288,7 @@ Case details
                                         </h3>
                                     </legend>
 
-                                    <div class="govuk-hint"> Availability of the parties will be reviewed as part of this request. </div>
+                                    <div class="govuk-hint">Availability of all the parties will be taken into account when scheduling this hearing.</div>
 
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
 
