Further changes for user testing. Switched page 2 with page 1. Work in progress

--- a/app/views/hearings/pages/channel.html
+++ b/app/views/hearings/pages/channel.html
@@ -34,9 +34,9 @@ Case details
                                     How will the parties attend the hearing?
                                 </h2>
                             </legend>
-                            <div class="govuk-hint">
-                                Select how each party will attend the hearing.
-                            </div>
+<!--                            <div class="govuk-hint">-->
+<!--                                Select how each party will attend the hearing.-->
+<!--                            </div>-->
 
                             <br />
 
