--- a/app/views/hearings/testing.html
+++ b/app/views/hearings/testing.html
@@ -22,6 +22,7 @@
 
 
 
+        <p><a target="_blank" href="/hearings/all">All states</a></p>       <!--All states</a></p>-->
 
         <p><a target="_blank" href="/hearings/firstalt">Version A - No hearings / Request a first hearing</a></p>       <!--First hearing alternative</a></p>-->
 
@@ -31,16 +32,16 @@
 
         <p><a target="_blank" href="/hearings/aftermonth">Scenario 4</a></p>       <!--After a month</a></p>-->
 
-        <p><a target="_blank" href="/hearings/all">Scenario 5</a></p>       <!--All states</a></p>-->
 
-        <br>
-        <br>
-        <br>
-        <br>
+
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
 
         <!--  <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=financialremedy&">Caselist - Financial Remedy</a></p>  -->
 
-        <p><a target="_blank" href="/hearings/third">3rd hearing</a></p>
+        <p><a target="_blank" href="/hearings/third">Scenario 5</a></p>
 
 
         <p><a target="_blank" href="/hearings/aftersubmission">After submission</a></p>
